<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="DUT_ALM_Valve" Id="{6758646b-b6b7-4d66-b478-11801b6873dc}">
    <Declaration><![CDATA[TYPE DUT_ALM_Valve :
STRUCT
	IsHealthy: BOOL := TRUE;
	TimeFailure: BOOL := FALSE;
	InAlarm: BOOL := TimeFailure OR NOT (IsHealthy);
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>