<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="DUT_IO" Id="{bcab29c5-b057-4a7d-8b92-5d4128defdf4}">
    <Declaration><![CDATA[TYPE DUT_IO :
STRUCT
	I_isOpen AT %I* : BOOL := FALSE;
	I_isClosed AT %I*   : BOOL := FALSE;
	I_isHealthy AT %I* : BOOL := FALSE;
	O_setOpen AT %Q*   : BOOL := FALSE;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>